Opened 5 years ago

Closed 4 years ago

#16076 closed bug (fixed)

Folder/Application names are not translated by default/Defaults button not working

Reported by: bitigchi Owned by: waddlesplash
Priority: normal Milestone: R1/beta2
Component: Preferences/Locale Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

On a fresh Beta2 install, the setting for translating application and folder names should be turned on by default. However, it is not. Ref: https://review.haiku-os.org/c/haiku/+/2002

In addition to this, Defaults button for this tab does not have any effect at all! When pressed, first and second tabs are reverted to the default state, but the third tab is totally unaffected.

Change History (8)

comment:1 by waddlesplash, 5 years ago

Milestone: UnscheduledR1/beta2

comment:2 by waddlesplash, 5 years ago

Ha, it looks like that file is only referenced in the FirstBootPrompt: https://xref.landonf.org/source/search?q=%22Locale+settings%22&defs=&refs=&path=-docs+-usb_vision&hist=&type=&project=haiku

Probably we should just delete it, add a new example to FirstBootPrompt, and then fix the actual default setting.

comment:3 by waddlesplash, 5 years ago

Owner: changed from pulkomandy to waddlesplash
Status: newassigned

comment:4 by waddlesplash, 5 years ago

Should be fixed by hrev54263; please test.

comment:5 by waddlesplash, 5 years ago

Ah, I missed the Locale tab change, will look into it.

comment:6 by waddlesplash, 5 years ago

Did that in hrev54264.

comment:7 by bitigchi, 4 years ago

waddlesplash, thanks for taking a look at this. It looks all okay, and seems to be working fine. Aside from that, the Defaults button got me thinking about this specific preflet; we ask the user to select a language whilst starting the install, right? Therefore the language that is selected should be accounted as the "Default" language. Currently it defaults to English, which only happens to be the default language for the system image, not the users. And this affects the currency, time formats as well, which is kind of frustrating to correct them. If pressed by mistake, everything goes to pre-install settings!

How to address this issue?

  • Maybe remove the Defaults button altogether? Just keep the Revert button in case user changes the value to something different?

comment:8 by waddlesplash, 4 years ago

Resolution: fixed
Status: assignedclosed

Well, that would be a separate issue. :)

Note: See TracTickets for help on using tickets.